third_party/rust/paste/tests/ui/unexpected-group.stderr
error: unexpected token
 --> $DIR/unexpected-group.rs:2:12
  |
2 |     fn [<a {} b>]() {}
  |            ^^
