third_party/rust/paste/tests/ui/unexpected-group.rs
use paste::paste;

paste! {
    fn [<a {} b>]() {}
}

fn main() {}
